realice correcciònes en el index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servokup</title>
     <!--Link de enlace con la carpeta de css-->
-    <link rel="stylesheet" href="../Css/style.css">
+    <link rel="stylesheet" href="Css/style.css">
     <!--Fuente para los botones de nav-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <img src="../img/Logo 4.png" alt="Logo-servokup">
+        <img src="img/Logo 4.png" alt="Logo-servokup">
     <nav>
         <ul>
             <li><a class="boton" href="index.html">Inicio</a></li>
@@ -27,11 +27,11 @@
     </nav>
     </header>
 <section>
-    <img src="../img/Servokup inicio.jpg" alt="imagen de inicio" >
+    <img src="img/Servokup inicio.jpg" alt="imagen de inicio" >
 </section>
 <div>
     <a href="https://web.whatsapp.com/" target="_blank">
-    <img src="../img/whatsapp.png" alt="Icono de whatsapp" class="logo-wpp">
+    <img src="img/whatsapp.png" alt="Icono de whatsapp" class="logo-wpp">
     </a>
 </div>
 <Footer>
