--- a/Html/flota.html
+++ b/Html/flota.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flota</title>
+    <title>Flota | Servokup Servicios</title>
     <!--Link de enlace con la carpeta de css-->
     <link rel="stylesheet" href="../Css/style.css">
     <!--Fuente para los botones de nav-->
@@ -14,7 +14,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <!--para redes Sociales-->
     <script src="https://kit.fontawesome.com/3c600142b2.js" crossorigin="anonymous"></script>
-  </head>
+    <meta name="description" content="Transporte seguro y confiable en la ciudad de Plottier, provincia de Neuquén. Ofrecemos servicios de transporte de pasajeros, carga y mensajería. Contáctanos hoy mismo para obtener un presupuesto.">
+    <meta name="keywords" content="transporte, transporte de pasajeros, transporte de carga, transporte mensajería, transporte seguro, transporte confiable, transporte en la ciudad de Plottier y Neuquén.">
+    <meta name="author" content="Héctor Villordo">
+    <link rel="shortcut icon" href="../img/Logo 2.png" type="image/x-icon">
+ </head>
 <body>
     <header>
         <img src="../img/Logo 4.png" alt="Logo Servokup">
