--- a/Html/Contacto.html
+++ b/Html/Contacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <title>Contacto | Servokup Servicios</title>
     <!--Link de enlace con la carpeta de css-->
     <link rel="stylesheet" href="../Css/style.css">
     <!--Fuente para los botones de nav-->
@@ -12,6 +12,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Josefin+Sans:ital,wght@1,500&family=Playfair+Display:wght@500&display=swap" rel="stylesheet"> 
     <!--para redes Sociales-->
     <script src="https://kit.fontawesome.com/3c600142b2.js" crossorigin="anonymous"></script>
+    <meta name="description" content="Transporte seguro y confiable en la ciudad de Plottier, provincia de Neuquén. Ofrecemos servicios de transporte de pasajeros, carga y mensajería. Contáctanos hoy mismo para obtener un presupuesto.">
+    <meta name="keywords" content="transporte, transporte de pasajeros, transporte de carga, transporte mensajería, transporte seguro, transporte confiable, transporte en la ciudad de Plottier y Neuquén.">
+    <meta name="author" content="Héctor Villordo">
+    <link rel="shortcut icon" href="../img/Logo 2.png" type="image/x-icon">
 </head>
 <body>
     <header>
