--- a/Html/Servicios.html
+++ b/Html/Servicios.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicios</title>
+    <title>Servicios | Servokup Servicios</title>
     <!--Link de enlace con la carpeta de css-->
     <link rel="stylesheet" href="../Css/style.css">
     <!--Fuente para los botones de nav-->
@@ -11,6 +11,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Josefin+Sans:ital,wght@1,500&family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3c600142b2.js" crossorigin="anonymous"></script>
+    <meta name="description" content="Conoce los servicios que otorgamos, los cuales nos ayudaron a posicionarnos como una de las mejores y mas recomendadas empresas de transporte de la localidad de Plottier y Neuquén">
+    <meta name="keywords" content="transporte, transporte de pasajeros, transporte de carga, transporte mensajería, transporte seguro, transporte confiable, puerta a puerta, larga distancia, servicio a empresas, transporte en la ciudad de Plottier y Neuquén.">
+    <meta name="author" content="Héctor Villordo">
+    <link rel="shortcut icon" href="../img/Logo 2.png" type="image/x-icon">
+    
 </head>
 <body>
     <header>
@@ -25,7 +30,7 @@
         </ul>
     </nav>
     
-    </header>
+    </header> 
     <h1>Servicios</h1>
     <section class="grid">
         <div class="Puerta">
